--- a/components/SecondaryPreview/SecondaryPreview.module.css
+++ b/components/SecondaryPreview/SecondaryPreview.module.css
@@ -23,7 +23,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; 
+    z-index: 0; 
     opacity: 0;
     transition: opacity 1s ease-in-out;
     object-fit: cover;
