--- a/components/shared/Input/Input.module.css
+++ b/components/shared/Input/Input.module.css
@@ -15,7 +15,7 @@
     padding: 20px;
     margin-bottom: 30px;
     background-color: var(--bg-color);
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--card-color);
     transition: all 0.2s;
 }
 
